Updated mobile menu

--- a/box-nav-demo/css/style.css
+++ b/box-nav-demo/css/style.css
@@ -160,25 +160,24 @@ height: auto;
       display: none;
       position: absolute;
       top: 45px;
-      right: 10px;
-      background: #fff;
+      right: 5px;
+      background: #e7e7e7;
       width: 220px;
       align:right;
       border: 1px solid #ccc;
       font-size:16px;
       box-shadow: rgba(0,0,0,0.498039) 2px 5px 10px 0px;
-      
     }
 
-    .with_nav #main_nav {
+.with_nav #main_nav {
       display: block;
     }
 
-    .access_aid {
+.access_aid {
       display: none;
     }
 
-    #access_nav {
+#access_nav {
       display: block;
       position: absolute;
       top: 2px;
@@ -187,9 +186,7 @@ height: auto;
       height: 0;
       padding-top: 40px;
       overflow: hidden;
-      
       background: black 10px 10px / 20px 20px no-repeat;
-
       background-image: -webkit-repeating-linear-gradient(black, #ccc 2px, #black 2px, #fff 4px);
       background-image: repeating-linear-gradient(black, #ccc 2px, #fff 2px, #fff 4px);
       z-index: 1;
